--- a/inventory.yaml
+++ b/inventory.yaml
@@ -12,3 +12,9 @@ all:
       ansible_become: yes
       ansible_become_method: sudo
       ansible_become_pass: asd123.
+    server3:
+      ansible_user: yasir
+      ansible_host: 172.16.60.44
+      ansible_become: yes
+      ansible_become_method: sudo
+      ansible_become_pass: asd123.
